sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:14: error: '=' expected but ';' found.
	while(i==getNombreValeurs()+1)
^AlgGnomeSort:25: error: ')' expected but 'else' found.
		else
                ^